Add tests to App and ResultCard
wondering if I need to snapshot test the app or maybe check and see if it has certain child components perhaps

also not sure if there is a way I can see if a component has a child with a certain class

--- a/src/components/ResultCard/ResultCard.css
+++ b/src/components/ResultCard/ResultCard.css
@@ -1,7 +1,7 @@
-.btn--favorite-false {
+.card--favorite-false .btn {
   background-color: red;
 }
 
-.btn--favorite-true {
+.card--favorite-true .btn {
   background-color: green;
 }
